syntax = "proto3";

option csharp_namespace = "LPS.Protos.Shared";

package lps.statusmonitor;

// Request to get iteration statuses by FQDN
message StatusQueryRequest {
  string fully_qualified_name = 1;
}

// Enum representing ExecutionStatus
enum ExecutionStatus {
  PENDING_EXECUTION = 0;
  SCHEDULED = 1;
  ONGOING = 2;
  COMPLETED = 3;
  PAUSED = 4;
  CANCELLED = 5;
  FAILED = 6;
  UNKOWN = 7; 
}

// Response with statuses
message StatusQueryResponse {
  repeated ExecutionStatus statuses = 1;
}

message MonitorRequest {
  string fully_qualified_name = 1;
}

message MonitorResponse {
  bool success = 1;
  string message = 2;
}


// Service definition
service MonitorService {
	rpc QueryIterationStatuses (StatusQueryRequest) returns (StatusQueryResponse);
	rpc Monitor (MonitorRequest) returns (MonitorResponse);
}
